package TP;

public class Juego {

}
